--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/livewire": "^2.12",
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.8",
+        "mpdf/mpdf": "^8.1",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
