--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.8",
         "mpdf/mpdf": "^8.1",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "ultramsg/whatsapp-php-sdk": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
